--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>You're invited!</h1>
         <h2>To something!</h2>
         
-        <p>The details:</p>
+        <p>The details:1</p>
         <ul>
             <li></li>
         </ul>
